[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/helicopter_sprites/police_heli/body.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/prop_frames.tres" type="SpriteFrames" id=3]
[ext_resource path="res://assets/sfx/explosion.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/heli.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 30.0
height = 600.0

[sub_resource type="CircleShape2D" id=2]
radius = 45.0

[node name="player" type="KinematicBody2D"]
scale = Vector2( 0.314561, 0.314561 )
script = ExtResource( 2 )

[node name="body_sprite" type="Sprite" parent="."]
position = Vector2( -38.0906, 21.766 )
scale = Vector2( 7.07773, 7.07773 )
texture = ExtResource( 1 )
flip_h = true

[node name="body_shape" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -28.1763, -2.81763 )
polygon = PoolVector2Array( 301.487, 107.07, 244.351, 123.621, 231.634, 149.053, 190.307, 168.127, -35.4044, 168.127, -38.5834, 155.411, -9.97211, 152.232, -6.79308, 126.8, -81.7113, 95.7995, -143.699, 53.535, -236.681, 45.0821, -332.481, 42.2645, -390.566, 46.772, -366.292, 28.1763, -408.557, -73.2584, -366.292, -64.8055, -309.94, 2.81763, -140.882, -4.76837e-06, -126.793, -33.8116, 14.0882, -59.1703, 104.252, -47.8997, 135.246, -19.7234, 214.14, -4.76837e-06, 290.216, 50.7174, 312.757, 70.4408 )

[node name="top_prop" type="Area2D" parent="."]
position = Vector2( 88.0989, -85.6804 )

[node name="shape" type="CollisionShape2D" parent="top_prop"]
visible = false
position = Vector2( -82.4637, 3.96909 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="top_prop"]
position = Vector2( -81.7408, -6.51158 )
scale = Vector2( 6.92358, 8.02558 )
frames = ExtResource( 3 )
playing = true

[node name="back_prop" type="Area2D" parent="."]
position = Vector2( -398.039, -47.5459 )

[node name="shape" type="CollisionShape2D" parent="back_prop"]
shape = SubResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="back_prop"]
scale = Vector2( 0.17, 0.17 )
frames = ExtResource( 3 )
playing = true

[node name="camera" type="Camera2D" parent="."]
current = true

[node name="Tween" type="Tween" parent="."]

[node name="heli_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
autoplay = true

[node name="expl_audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
